# MLOPS_Project_v2

./: .gitignore  README.md  pyproject.toml
arquitectura/: SDD.md
data/: Posible_modelo_BETO.ipynb  Posible_modelo_BETO.py  Preprocesamiento.ipynb  etiquetamiento.ipynb  etiquetamiento_original.ipynb
kb-soporte-tecnico/: Changelog.md  README.md
kb-soporte-tecnico/01_SOP/: sop-consulta-portafolio-cliente-v1.0.md
kb-soporte-tecnico/02_Playbooks/: playbook-error-consulta-portafolio-v1.0.md
kb-soporte-tecnico/03_Catalogos/: catalogo-crm-portafolio-v1.0.md
kb-soporte-tecnico/04_FAQs/: faq-consulta-portafolio-v1.0.md
kb-soporte-tecnico/Data/: clientes_Parametros.json  clientes_diagnostico.json  clientes_equipos.json  clientes_portafolio.json
src/01-Intro-ML-EDA/notebooks/: Proyecto_tips.ipynb
src/02-Experiment-Tracking/: 00_data_preparation.ipynb  Modelo_Propinas.ipynb
src/03-Orchestation/: Modelo_Propinas_funciones.ipynb  Modelo_Propinas_funciones.py
